--- a/app/src/main/res/layout/product.xml
+++ b/app/src/main/res/layout/product.xml
@@ -1,50 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="120dp"
-    android:layout_height="180dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
+    <LinearLayout
+        android:layout_width="120dp"
+        android:layout_height="180dp"
+        android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#FFF000"
-            android:gravity="center"
-            android:text="STOKTA YOK"
-            android:id="@+id/tvProductStockOut"
-            android:textStyle="bold" />
-
-        <ImageView
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/ivProductImage"
-            android:layout_weight="1" />
+            android:layout_weight="1">
 
-    </RelativeLayout>
+            <ImageView
+                android:id="@+id/ivProductImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:scaleType="fitXY" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:id="@+id/tvProductPrice"
-        android:text="5.99 $"
-        android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tvProductStockOut"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#FFF000"
+                android:gravity="center"
+                android:text="STOKTA YOK"
+                android:textStyle="bold" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:id="@+id/tvProductName"
-        android:text="PRODUCT_NAME" />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:id="@+id/btnProductView"
-        android:text="View"
-        android:textStyle="bold" />
+            <TextView
+                android:background="@color/textBackground"
+
+                android:id="@+id/tvProductPrice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@id/tvProductName"
+                android:gravity="center"
+                android:text="5.99 $"
+                android:textStyle="bold" />
+
+            <TextView
+                android:background="@color/textBackground"
+                android:id="@+id/tvProductName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:gravity="center"
+                android:text="PRODUCT_NAME" />
+        </RelativeLayout>
+
+
+        <Button
+            android:id="@+id/btnProductView"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="View"
+            android:textStyle="bold" />
+    </LinearLayout>
 </LinearLayout>
