--- a/app/src/main/res/layout/content_main_menu.xml
+++ b/app/src/main/res/layout/content_main_menu.xml
@@ -271,6 +271,7 @@
 
     <LinearLayout
         android:id="@+id/llOrder"
+        android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
