--- a/app/src/main/res/layout/content_main_menu.xml
+++ b/app/src/main/res/layout/content_main_menu.xml
@@ -93,6 +93,25 @@
                     style="@style/input_pre"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@string/pre_product_id" />
+
+                <EditText
+                    android:id="@+id/etProductInfoId"
+                    style="@style/input_obj"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:editable="false"
+                    android:text="@string/hint_product_id" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/hr_height"
+                    android:background="@color/colorHR" />
+
+                <TextView
+                    style="@style/input_pre"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="@string/pre_product_brand" />
 
                 <EditText
